# env

./: .ansible-lint  .ansible-lint-ignore  .ansible-lint.yml  .gitignore  .gitmodules  README.md  ansible.cfg  hosts.yml  main.yml  pyproject.toml  requirements-dev.txt  requirements-test.txt  requirements.txt  requirements.yml  ruff.toml  vault_passwd
.github/: dependabot.yml
.github/actions/setup-python-venv/: action.yml
.github/config/: labeler.yml  ruff.toml  yamllint.yml
.github/workflows/: README.md  ansible.yml  conventional_commits.yml  conventional_pull_requests.yml  conventional_tags.yml  label_pull_request.yml  markdown.yml  python.yml  shell.yml  yaml.yml
ansible_collections/caseysparkz/environment/: README.md
ansible_collections/caseysparkz/environment/roles/filesystem/: README.md
ansible_collections/caseysparkz/environment/roles/git/: README.md
ansible_collections/caseysparkz/performance/roles/all/: README.md
ansible_collections/caseysparkz/security/: galaxy.yml
ansible_collections/caseysparkz/security/roles/passwords/: README.md
ansible_collections/caseysparkz/security/roles/ulimit/: README.md
collections/caseysparkz/environment/: galaxy.yml
collections/caseysparkz/environment/meta/: runtime.yml
collections/caseysparkz/environment/roles/all/: README.md
collections/caseysparkz/environment/roles/bash/: README.md
collections/caseysparkz/environment/roles/ca_certificates/: README.md
collections/caseysparkz/environment/roles/dotfiles/: README.md
collections/caseysparkz/environment/roles/gnupg/: README.md
collections/caseysparkz/environment/roles/screen/: README.md
collections/caseysparkz/environment/roles/scripts/: README.md
collections/caseysparkz/environment/roles/vim/: README.md
collections/caseysparkz/performance/: README.md  galaxy.yml
collections/caseysparkz/performance/meta/: runtime.yml
collections/caseysparkz/performance/roles/filesystem/: README.md
collections/caseysparkz/performance/roles/ioscheduler/: README.md
collections/caseysparkz/security/: README.md  galaxy.yml
collections/caseysparkz/security/roles/all/: README.md
collections/caseysparkz/security/roles/auditd/: README.md
collections/caseysparkz/security/roles/defaultdeny/: README.md
group_vars/network/: main.yml  vault.yml
group_vars/pfsense/: main.yml
group_vars/routeros/: main.yml
host_vars/ap01.home.caseysparkz.com/: main.yml
host_vars/localhost/: main.yml
host_vars/sw01.home.caseysparkz.com/: main.yml
hosts/: main.yml
playbooks/: all.yml  common.yml  environment.yml  new_host.yml  performance.yml  security.yml
playbooks/localhost/: environment.yml
playbooks/network/: upgrade.yml
playbooks/network/provision/: interface_bridge.yml  interface_bridge_vlan.yml  interface_ethernet_set_name.yml  interface_list.yml  interface_vlan.yml  interface_wifi.yml  ip.yml  main.yml  system.yml  tool.yml
roles/: home_dirs.yml
roles/caseysparkz.common/: meta.yml  tasks.yml
roles/caseysparkz.environment/: defaults.yml
roles/caseysparkz.environment/defaults/: main.yml
roles/caseysparkz.environment/files/bash/: aliases.sh  bashrc  profile  vars.sh
roles/caseysparkz.environment/files/ca-certificates/: garden.lan.crt
roles/caseysparkz.environment/files/config/: pylint.pylintrc  yamllint.yml
roles/caseysparkz.environment/files/git/: gitconfig
roles/caseysparkz.environment/files/gnupg/: gpg-agent.conf  himself@caseyspar.kz.asc
roles/caseysparkz.environment/files/psql/: psqlrc
roles/caseysparkz.environment/files/python/: requirements.txt
roles/caseysparkz.environment/files/screen/: screenrc
roles/caseysparkz.environment/files/ssh/: config
roles/caseysparkz.environment/files/vim/: .gitignore
roles/caseysparkz.environment/meta/: main.yml
roles/caseysparkz.environment/tasks/: bash.yml  ca_certificates.yml  dotfiles.yml  filesystem.yml  git.yml  gnupg.yml  home_dir.yml  main.yml  packages.yml  screen.yml  script_dir.yml  ssh.yml
roles/caseysparkz.packages/: README.md  defaults.yml
roles/caseysparkz.packages/defaults/: main.yml
roles/caseysparkz.packages/handlers/: main.yml
roles/caseysparkz.packages/meta/: main.yml
roles/caseysparkz.packages/tasks/: install.yml  main.yml  system_packages.yml
roles/caseysparkz.performance/: README.md
roles/caseysparkz.performance/defaults/: main.yml
roles/caseysparkz.performance/handlers/: reflector.yml  timeshift.yml
roles/caseysparkz.performance/meta/: main.yml  requirements.yml
roles/caseysparkz.performance/tasks/: filesystem.yml  install_dependencies.yml  io_sched.yml  reflector.yml  timeshift.yml
roles/caseysparkz.security/handlers/: fail2ban.yml  grub.yml  initramfs.yml  iptables.yml
roles/caseysparkz.security/meta/: main.yml  requirements.yml
roles/caseysparkz.security/tasks/: auditd.yml  disable_crash_reporters.yml  fail2ban.yml  faillock.yml  iptables.yml  kernel.yml  main.yml  priviledge_escalation.yml  privilege_escalation.yml  ssh.yml  ulimit.yml  unattended_upgrades.yml
roles/environment/: README.md
roles/environment/defaults/: main.yml
roles/environment/files/bash/: aliases.sh  bashrc  secrets.asc  vars.sh  wsecrets.asc
roles/environment/files/config/: pylint.pylintrc
roles/environment/files/gnupg/: casey@taumotors.com.asc  gpg.conf
roles/environment/files/vim/: filetype.vim  vimrc
roles/environment/tasks/: bash.yml  ca_certificates.yml  cron.yml  dotfiles.yml  main.yml  packages.yml  remove_default_packages.yml  screen.yml  script_dir.yml  ssh.yml  vim.yml
roles/performance/: README.md
roles/performance/tasks/: main.yml  reflector.yml  timeshift.yml
roles/performance_tweaks/defaults/: main.yml
roles/performance_tweaks/tasks/: install_dependencies.yml
roles/security/: README.md  defaults.yml
roles/security/files/: audit.rules
roles/security/handlers/: fail2ban.yml  grub.yml  initramfs.yml  iptables.yml  sshd.yml
roles/security/meta/: requirements.yml
roles/security/tasks/: .swp  fail2ban.yml  faillock.yml  iptables.yml  kernel.yml  main.yml  passwords.yml  ssh.yml  ulimit.yml  unattended_upgrades.yml
(+266 files in other folders)
